--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,8 +10,7 @@ jobs:
   code-review:
     if: |
       github.event_name == 'pull_request' ||
-        (github.event.comment.user.login == 'adshao' &&
-          startsWith(github.event.comment.body, 'chatgpt'))
+        startsWith(github.event.comment.body, 'chatgpt')
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
